--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>OpenCartLocalHost2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-      <dependencyManagement>
+     
         <dependencies>
             <!-- TestNG -->
             <dependency>
@@ -27,11 +27,13 @@
             </dependency>
 
             <!-- WebDriver Manager -->
-            <dependency>
-                <groupId>org.webjars.npm</groupId>
-                <artifactId>webdriver-manager</artifactId>
-                <version>13.0.0-beta</version>
-            </dependency>
+           <!-- WebDriverManager for Java (by Boni García) -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.6.3</version>
+</dependency>
+
 
             <!-- Apache Commons Lang3 -->
             <dependency>
@@ -45,20 +47,18 @@
     <version>3.12.0</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.24.3</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>2.24.3</version>
-</dependency>
-
+   <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.24.3</version>
+        </dependency>
         </dependencies>
-    </dependencyManagement>
+  
 
     <build>
         <plugins>
