--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
         <artifactId>log4j-slf4j2-impl</artifactId>
         <version>2.24.3</version>
     </dependency>
+    <dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.2</version>
+</dependency>
+
 
         </dependencies>
   
